Bug 444106 - "Configure Bluetooth" doesn't open Bluetooth settings
Summary: "Configure Bluetooth" doesn't open Bluetooth settings
Status: RESOLVED FIXED
Alias: None
Product: Bluedevil
Classification: Unmaintained
Component: system tray (other bugs)
Version First Reported In: master
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-10-20 12:42 UTC by Fushan Wen
Modified: 2021-12-25 10:22 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fushan Wen 2021-10-20 12:42:48 UTC
SUMMARY
"Configure Bluetooth" (in the context menu or in the panel) doesn't open Bluetooth settings.

STEPS TO REPRODUCE
1. Right click Bluetooth icon
2. Click "Configure Bluetooth"

OBSERVED RESULT
Settings home page is opened.

EXPECTED RESULT
Bluetooth settings is opened.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20211016
KDE Plasma Version: 5.23.80
KDE Frameworks Version: 5.88.0
Qt Version: 5.15.2
Kernel Version: 5.14.11-1-default (64-bit)
Graphics Platform: X11
Processors: 8 × AMD Ryzen 7 4700U with Radeon Graphics
Memory: 15.0 GiB of RAM
Graphics Processor: AMD RENOIR
Comment 1 Bug Janitor Service 2021-10-20 13:28:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/bluedevil/-/merge_requests/49
Comment 2 Fushan Wen 2021-10-21 12:43:21 UTC
Git commit fcd8d68cee0e373ff33de3361dea3d70934b7683 by Fushan Wen.
Committed on 20/10/2021 at 13:26.
Pushed by ngraham into branch 'master'.

Fix KCMShell open path

Make "Configure Bluetooth" open Bluetooth settings correctly.

M  +1    -1    src/applet/package/contents/ui/BluetoothApplet.qml

https://invent.kde.org/plasma/bluedevil/commit/fcd8d68cee0e373ff33de3361dea3d70934b7683
Comment 3 Alexander Lohnau 2021-10-21 17:37:12 UTC
Git commit e3941a11270fbdc1876ce89d83e43bbd16763974 by Alexander Lohnau.
Committed on 21/10/2021 at 17:31.
Pushed by alex into branch 'master'.

Fix compatibility with module names referencing KCM desktop file names

The KCM's desktop file is names "bluetooth", but the library is called
kcm_bluetooth and the metadata file says "X-KDE-PluginInfo-Name=kcm_bluetooth".

To be able to launch the KCM using the "bluetooth" module name we have to check the desktop
file name.

M  +5    -0    core/MenuItem.cpp

https://invent.kde.org/plasma/systemsettings/commit/e3941a11270fbdc1876ce89d83e43bbd16763974