Fix compatibility with module names referencing KCM desktop file names

The KCM's desktop file is names "bluetooth", but the library is called
kcm_bluetooth and the metadata file says "X-KDE-PluginInfo-Name=kcm_bluetooth".

To be able to launch the KCM using the "bluetooth" module name we have to check the desktop
file name.

BUG: 444106